Fix overflow in newsreader

--- a/src/redcms-base/assets/default-skin.css
+++ b/src/redcms-base/assets/default-skin.css
@@ -39,6 +39,11 @@ p, pre {
 }
 
 /* CSS BASE CLASSES FOR REDCMS */
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .redcms-small {
     color: gray;
     font-size: 13px;
